--- a/package/boot/uboot-zynq/Makefile
+++ b/package/boot/uboot-zynq/Makefile
@@ -24,6 +24,11 @@ define U-Boot/Default
   HIDDEN:=1
 endef
 
+define U-Boot/qmtech-sk
+  NAME:=QMTECH Zynq Starter Kit
+  BUILD_DEVICES:=qmtech_zynq-xc7z010-sk
+endef
+
 define U-Boot/zc702
   NAME:=Xilinx ZC702 Dev Board
   BUILD_DEVICES:=xlnx_zynq-zc702
@@ -45,6 +50,7 @@ define U-Boot/zybo_z7
 endef
 
 UBOOT_TARGETS := \
+	qmtech-sk \
 	zc702 \
 	zed \
 	zybo \
